<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/appointment"
        android:title="@string/hyperlink"
        android:icon="@drawable/ic_baseline_home_24"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_videos"
        android:title="@string/videos" />

    <item
        android:id="@+id/menu_consultancy"
        android:title="@string/consultancy" />

    <item
        android:id="@+id/menu_courses"
        android:title="@string/courses" />

    <item
        android:id="@+id/menu_books"
        android:title="@string/books" />

    <item
        android:id="@+id/menu_queries"
        android:title="@string/queries" />

    <item
        android:id="@+id/menu_istikhara"
        android:title="@string/istikhara" />
</menu>